crates/python_parser/tests/snapshots/valid_syntax@comma_separated_regular_list_terminator.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/inline/ok/comma_separated_regular_list_terminator.py
---
## AST

```
Module(
    ModModule {
        range: 0..181,
        body: [
            Expr(
                ExprStmt {
                    range: 141..144,
                    value: List(
                        ListExpr {
                            range: 141..144,
                            elts: [
                                NumberLiteral(
                                    NumberLiteralExpr {
                                        range: 142..143,
                                        value: Int(
                                            0,
                                        ),
                                    },
                                ),
                            ],
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 145..151,
                    value: List(
                        ListExpr {
                            range: 145..151,
                            elts: [
                                NumberLiteral(
                                    NumberLiteralExpr {
                                        range: 146..147,
                                        value: Int(
                                            0,
                                        ),
                                    },
                                ),
                                NumberLiteral(
                                    NumberLiteralExpr {
                                        range: 149..150,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                            ],
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 152..159,
                    value: List(
                        ListExpr {
                            range: 152..159,
                            elts: [
                                NumberLiteral(
                                    NumberLiteralExpr {
                                        range: 153..154,
                                        value: Int(
                                            0,
                                        ),
                                    },
                                ),
                                NumberLiteral(
                                    NumberLiteralExpr {
                                        range: 156..157,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                            ],
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 160..169,
                    value: List(
                        ListExpr {
                            range: 160..169,
                            elts: [
                                NumberLiteral(
                                    NumberLiteralExpr {
                                        range: 161..162,
                                        value: Int(
                                            0,
                                        ),
                                    },
                                ),
                                NumberLiteral(
                                    NumberLiteralExpr {
                                        range: 164..165,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                                NumberLiteral(
                                    NumberLiteralExpr {
                                        range: 167..168,
                                        value: Int(
                                            2,
                                        ),
                                    },
                                ),
                            ],
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 170..180,
                    value: List(
                        ListExpr {
                            range: 170..180,
                            elts: [
                                NumberLiteral(
                                    NumberLiteralExpr {
                                        range: 171..172,
                                        value: Int(
                                            0,
                                        ),
                                    },
                                ),
                                NumberLiteral(
                                    NumberLiteralExpr {
                                        range: 174..175,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                                NumberLiteral(
                                    NumberLiteralExpr {
                                        range: 177..178,
                                        value: Int(
                                            2,
                                        ),
                                    },
                                ),
                            ],
                            ctx: Load,
                        },
                    ),
                },
            ),
        ],
    },
)
```
