crates/python_parser/tests/snapshots/valid_syntax@decorator_async_function.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/inline/ok/decorator_async_function.py
---
## AST

```
Module(
    ModModule {
        range: 0..32,
        body: [
            FunctionDef(
                FunctionDefStmt {
                    range: 0..31,
                    is_async: true,
                    decorator_list: [
                        Decorator {
                            range: 0..10,
                            expression: Name(
                                NameExpr {
                                    range: 1..10,
                                    id: Name("decorator"),
                                    ctx: Load,
                                },
                            ),
                        },
                    ],
                    name: Identifier {
                        id: Name("foo"),
                        range: 21..24,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 24..26,
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            ExprStmt {
                                range: 28..31,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 28..31,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
