crates/python_parser/tests/snapshots/valid_syntax@except_stmt_as_name_soft_keyword.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/inline/ok/except_stmt_as_name_soft_keyword.py
---
## AST

```
Module(
    ModModule {
        range: 0..100,
        body: [
            Try(
                TryStmt {
                    range: 0..99,
                    body: [
                        Expr(
                            ExprStmt {
                                range: 5..8,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 5..8,
                                    },
                                ),
                            },
                        ),
                    ],
                    handlers: [
                        ExceptHandler(
                            ExceptHandlerExceptHandler {
                                range: 9..39,
                                type_: Some(
                                    Name(
                                        NameExpr {
                                            range: 16..25,
                                            id: Name("Exception"),
                                            ctx: Load,
                                        },
                                    ),
                                ),
                                name: Some(
                                    Identifier {
                                        id: Name("match"),
                                        range: 29..34,
                                    },
                                ),
                                body: [
                                    Expr(
                                        ExprStmt {
                                            range: 36..39,
                                            value: EllipsisLiteral(
                                                EllipsisLiteralExpr {
                                                    range: 36..39,
                                                },
                                            ),
                                        },
                                    ),
                                ],
                            },
                        ),
                        ExceptHandler(
                            ExceptHandlerExceptHandler {
                                range: 40..69,
                                type_: Some(
                                    Name(
                                        NameExpr {
                                            range: 47..56,
                                            id: Name("Exception"),
                                            ctx: Load,
                                        },
                                    ),
                                ),
                                name: Some(
                                    Identifier {
                                        id: Name("case"),
                                        range: 60..64,
                                    },
                                ),
                                body: [
                                    Expr(
                                        ExprStmt {
                                            range: 66..69,
                                            value: EllipsisLiteral(
                                                EllipsisLiteralExpr {
                                                    range: 66..69,
                                                },
                                            ),
                                        },
                                    ),
                                ],
                            },
                        ),
                        ExceptHandler(
                            ExceptHandlerExceptHandler {
                                range: 70..99,
                                type_: Some(
                                    Name(
                                        NameExpr {
                                            range: 77..86,
                                            id: Name("Exception"),
                                            ctx: Load,
                                        },
                                    ),
                                ),
                                name: Some(
                                    Identifier {
                                        id: Name("type"),
                                        range: 90..94,
                                    },
                                ),
                                body: [
                                    Expr(
                                        ExprStmt {
                                            range: 96..99,
                                            value: EllipsisLiteral(
                                                EllipsisLiteralExpr {
                                                    range: 96..99,
                                                },
                                            ),
                                        },
                                    ),
                                ],
                            },
                        ),
                    ],
                    orelse: [],
                    finalbody: [],
                    is_star: false,
                },
            ),
        ],
    },
)
```
